# tmr-core

./: .gitignore  .gitmodules
tmr-docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
tmr-docs/docs/: architecture.md  build.md  controls.md  intro.md  scenarios.md
tmr-docs/src/components/HomepageFeatures/: index.tsx
tmr-docs/src/pages/: index.tsx
tmr-localization/: CMakeLists.txt
tmr-simulator/: .gitignore  CMakeLists.txt
tmr-simulator/data/: thruster_template.scn  tmr-simulator.scn  tmr-submarine.scn  zenoh.json5
tmr-simulator/patches/: stonefish-local.patch
tmr-simulator/src/: MyApp.cpp  MyApp.h  SimulationManager.cpp  SimulationManager.h  Telemetry.cpp  Telemetry.h  main.cpp
tmr-visualizer/: README.md  requirements.txt  viewer.py
